# Spektrum

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  Spektrum.sln  build.bat  config.cfg  vcpkg.json
Spektrum/: Spektrum.vcxproj  Spektrum.vcxproj.filters  imgui.ini
Spektrum/Assets/: radial_gradient.frag
Spektrum/Assets/data/: script.py
Spektrum/src/: App.cpp  App.h  AudioSink.cpp  AudioSink.h  Config.cpp  Config.h  Constants.h  EventHandler.cpp  EventHandler.h  Gui.cpp  Gui.h  Main.cpp  Scene.cpp  Scene.h  Window.cpp  Window.h  stdafx.h
Spektrum/src/__OLD/: SoundHandler.cpp  SoundHandler.h
Testing/: Testing.cpp  Testing.vcxproj  Testing.vcxproj.filters  smartpointers.cpp
src/: AudioSink.cpp  AudioSink.h  Config.cpp  Config.h  Gui.cpp  Gui.h  Main.cpp  Scene.cpp  Scene.h  Window.cpp  Window.h  audio_sink.cpp  audio_sink.h  audio_windowing.cpp  audio_windowing.h  beat_detector.cpp  beat_detector.h  color.cpp  color.h  dft.cpp  dft.h  filter.cpp  filter.h  logging.cpp  logging.h  scene_circle.cpp  scene_circle.h  scene_histogram.cpp  scene_histogram.h  stdafx.h
src_old/: audio_sink_old.cpp  audio_sink_old.h  config_old.cpp  config_old.h
